Import of ISHIGAKI/Path-Extended-0.04 from CPAN.
gitpan-cpan-distribution: Path-Extended
gitpan-cpan-version:      0.04
gitpan-cpan-path:         ISHIGAKI/Path-Extended-0.04.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Path-Extended
-version:            0.03
+version:            0.04
 abstract:           yet another Path class
 author:
     - Kenichi Ishigaki <ishigaki@cpan.org>
@@ -10,7 +10,6 @@ configure_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Carp:                 0
-    Data::Dump:           0
     Encode:               0
     Exporter::Lite:       0
     Fcntl:                0
@@ -21,6 +20,7 @@ requires:
     File::Spec:           0
     File::stat:           0
     IO:                   1.23
+    Log::Dump:            0
     Scalar::Util:         0
     Test::Classy:         0.04
     Test::More:           0.47
@@ -29,7 +29,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.46
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
