--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Path-Extended
-version:            0.09
+version:            0.10
 abstract:           yet another Path class
 author:
     - Kenichi Ishigaki <ishigaki@cpan.org>
@@ -11,7 +11,6 @@ configure_requires:
 requires:
     Carp:                 0
     Encode:               0
-    Exporter::Lite:       0
     Fcntl:                0
     File::Basename:       0
     File::Copy::Recursive:  0
@@ -22,6 +21,7 @@ requires:
     IO:                   1.23
     Log::Dump:            0
     Scalar::Util:         0
+    Sub::Install:         0
     Test::Classy:         0.04
     Test::More:           0.47
     Test::UseAllModules:  0.09
