--- a/META.yml
+++ b/META.yml
@@ -1,37 +1,37 @@
---- #YAML:1.0
-name:               Path-Extended
-version:            0.19
-abstract:           yet another Path class
+---
+abstract: 'yet another Path class'
 author:
-    - Kenichi Ishigaki <ishigaki@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Kenichi Ishigaki <ishigaki@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:                 0
-    Encode:               0
-    Fcntl:                0
-    File::Basename:       0
-    File::Copy::Recursive:  0
-    File::Find::Rule:     0
-    File::Path:           0
-    File::Spec:           3.23
-    File::stat:           0
-    IO:                   1.23
-    Log::Dump:            0
-    Scalar::Util:         0
-    Sub::Install:         0
-    Test::Classy:         0.04
-    Test::More:           0.47
-    Test::UseAllModules:  0.09
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Path-Extended
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  Encode: 0
+  Fcntl: 0
+  File::Basename: 0
+  File::Copy::Recursive: 0
+  File::Find::Rule: 0
+  File::Path: 0
+  File::Spec: 3.23
+  File::stat: 1
+  IO: 1.23
+  Log::Dump: 0
+  Scalar::Util: 0
+  Sub::Install: 0
+  Test::Classy: 0.04
+  Test::More: 0.47
+  Test::UseAllModules: 0.09
+version: 0.20
